k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: masea
  labels:
    app.kubernetes.io/part-of: masea
